--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "react": "16.8.3",
     "react-native": "0.59.8",
     "react-native-elements": "^1.1.0",
+    "react-native-status-bar-height": "^2.3.1",
     "react-native-vector-icons": "^6.4.2",
     "react-redux": "^7.0.3",
-    "redux-saga": "^1.0.2"
+    "redux-saga": "^1.0.2",
+    "styled-components": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.4",
