--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native-status-bar-height": "^2.3.1",
     "react-native-vector-icons": "^6.4.2",
     "react-redux": "^7.0.3",
+    "redux": "^4.0.1",
     "redux-saga": "^1.0.2",
     "styled-components": "^4.2.0"
   },
